<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#14212121"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_200"
        android:orientation="horizontal"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/add_item"
        app:titleTextColor="@color/white" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_white_rounded"
        android:hint="@string/enter_name"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_priority"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_white_rounded">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_priority"
            style="@style/SpinnerTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical" />

    </FrameLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_status"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_white_rounded">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_status"
            style="@style/SpinnerTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical" />

    </FrameLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_btn_purple"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/create_item"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>