<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="15dp"
    android:background="@drawable/bg_white_rounded"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.daimajia.swipe.SwipeLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/layout_change_status"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:background="@color/purple_200">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="6dp"
                        android:src="@drawable/ic_change"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/change_status"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        tools:ignore="ContentDescription" />

                </FrameLayout>


                <FrameLayout
                    android:id="@+id/layout_delete"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:background="#E85252">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="6dp"
                        android:src="@drawable/ic_delete"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/delete"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        tools:ignore="ContentDescription" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        tools:text="Potato" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/priority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/priority"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/status"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_show_hide_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_btn_purple"
                        android:padding="8dp"
                        android:text="@string/show_history"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/item_history"
                        android:layout_marginTop="10dp" />

                </LinearLayout>


            </LinearLayout>

        </com.daimajia.swipe.SwipeLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>
